2006-02-22  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/Makefile.am:
	* src/via_3d.c: (via3DDstFormat), (via3DTexFormat),
	(via3DDstSupported), (via3DTexSupported), (viaSet3DDestination),
	(viaSet3DDrawing), (viaSet3DFlags), (viaOrder), (viaSet3DTexture),
	(viaSet3DTexBlendCol), (viaSet3DCompositeOperator),
	(via3DOpSupported), (via3DEmitQuad), (via3DEmitState),
	(via3DEmitClipRect), (viaInit3DState):
	* src/via_3d.h:
	* src/via_accel.c: (viaDumpDMA), (viaFlushPCI),
	(viaFlushDRIEnabled), (viaSetupCBuffer), (viaTearDownCBuffer),
	(viaInitAgp), (viaEnableVQ), (viaDisableVQ), (viaAccelSetMode),
	(viaInitialize2DEngine), (viaAccelSync), (viaSetClippingRectangle),
	(viaDisableClipping), (viaAccelClippingHelper),
	(viaAccelSolidHelper), (viaAccelPlaneMaskHelper),
	(viaAccelTransparentHelper), (viaAccelCopyHelper),
	(viaSetupForScreenToScreenCopy), (viaSubsequentScreenToScreenCopy),
	(viaSetupForSolidFill), (viaSubsequentSolidFillRect),
	(viaSetupForMono8x8PatternFill),
	(viaSubsequentMono8x8PatternFillRect),
	(viaSetupForColor8x8PatternFill),
	(viaSubsequentColor8x8PatternFillRect),
	(viaSetupForCPUToScreenColorExpandFill),
	(viaSubsequentScanlineCPUToScreenColorExpandFill),
	(viaSetupForImageWrite), (viaSubsequentImageWriteRect),
	(viaSetupForSolidLine), (viaSubsequentSolidTwoPointLine),
	(viaSubsequentSolidHorVertLine), (viaSetupForDashedLine),
	(viaSubsequentDashedTwoPointLine), (viaInitXAA),
	(viaAccelMarkSync), (viaAccelWaitMarker), (viaExaPrepareSolid),
	(viaExaSolid), (viaExaDoneSolidCopy), (viaExaPrepareCopy),
	(viaExaCopy), (viaExaCompositePictDesc), (viaExaPrintComposite),
	(viaBitExpandHelper), (viaPixelARGB8888), (viaExpandablePixel),
	(viaCheckUpload), (viaOrder), (viaExaDownloadFromScreen),
	(viaExaTexUploadToScreen), (viaExaUploadToScreen),
	(viaExaUploadToScratch), (viaExaCheckComposite), (viaIsAGP),
	(viaIsOffscreen), (viaExaPrepareComposite), (viaExaComposite),
	(viaInitExa), (viaInitAccel), (viaExitAccel), (viaFinishInitAccel),