@@ -1,3 +1,8 @@
+2006-02-25  Thomas Hellstrom  <thomas-at-tungstengraphics.com>
+
+	* src/via_dmabuffer.h:
+	Added missing file from previous commit.
+
 2006-02-22  Thomas Hellstrom  <thomas-at-tungstengraphics.com>
 
 	* src/Makefile.am:
